public/css/stylesheet.css
:root {
    --nadeshiko: #F6ADC6;
    --nadeshiko-dark: #872d4d;
    --pale-grey: #ffffff80;
    --gold: #e99a3f;
    --gold-transparent: #e99a3f90;
    --accent: var(--nadeshiko-dark);
    --accent-network: #bc6ff8;
    --accent-bedwars: #ff835c;
    --accent-duels: #6f85f8;
    --accent-skywars: #90ff5c;
    --grey: #888;
    --mc0: #000000;
    /* Black */
    --mc1: #0000AA;
    /* Dark Blue */
    --mc2: #00AA00;
    /* Dark Green */
    --mc3: #00AAAA;
    /* Dark Aqua */
    --mc4: #AA0000;
    /* Dark Red */
    --mc5: #AA00AA;
    /* Dark Purple */
    --mc6: #FFAA00;
    /* Gold */
    --mc7: #AAAAAA;
    /* Gray */
    --mc8: #555555;
    /* Dark Gray */
    --mc9: #5555FF;
    /* Blue */
    --mca: #55FF55;
    /* Green */
    --mcb: #55FFFF;
    /* Aqua */
    --mcc: #FF5555;
    /* Red */
    --mcd: #FF55FF;
    /* Light Purple */
    --mce: #FFFF55;
    /* Yellow */
    --mcf: #FFFFFF;
    /* White */
}

/* Stats */


.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    background-color: #000000cc;
    font-size: 18px;
}

.header-left,
.header-right {
    display: flex;
    align-items: center;
}

.header-left a {
    margin-right: 15px;
    text-decoration: none;
}

.header2 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    background-color: #000000a0;
    font-size: 18px;
    backdrop-filter: blur(4px);
    overflow: hidden;
}

/* what is she cooking? nothing good */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Inter, -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", "Roboto", sans-serif;
    color: var(--pale-grey);
    height: 100vh;
    position: relative;
    z-index: -6;
}

.player-card {
    margin: 20px;
    padding: 10px;
}

.games {
    position: relative;
    flex-grow: 1;
}

header {
    flex: 0 1 auto;
}

footer {
    flex-shrink: 0;
    padding: 10px;
}

footer>a {
    all: unset;
    color: var(--nadeshiko);
    text-decoration: underline;
    transition-duration: 0.3s;
}

footer>a:hover {
    color: #ffffff;
    cursor: pointer;
}

.logo {
    height: 25px;
    padding-left: 10px;
    padding-right: 5px;
}

.wordmark {
    color: white;
    padding-left: 5px;
    padding-right: 15px;
    font-weight: bold;
}

.header-button {
    transition-duration: 0.3s;
    background-color: #222;
    border-radius: 99px;
    padding: 7px;
    padding-left: 16px;
    padding-right: 16px;
    color: var(--pale-grey);
    display: flex;
    align-items: center;
    justify-content: center;
    transition-duration: 0.3s;
    font-size: 14px;
}

.header-button:hover {
    padding-left: 30px;
    padding-right: 30px;
    background-color: var(--nadeshiko-dark);
}

.header-game {
    margin-right: 30px;
    margin-left: 30px;
    color: var(--pale-grey);
    font-weight: 500;
    position: relative;
    transition-duration: 0.5s;
}

.header-game:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%) translateY(16.5px);
    opacity: 0;
    width: 120%;
    height: 5px;
    background-color: var(--accent);
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    transition-duration: 0.5s;
}

.header-name {
    font-size: 20px;
    font-weight: 600;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 30px;
    transition-duration: 1s;
}

.header-down {
    margin-right: 20px;
    color: #fff8;
}

.header-game,
.header-down {
    transition-duration: 0.3s;
}

.header-game:hover,
.header-down:hover {
    color: #fff;
    cursor: pointer;
}

.header-icon {
    height: 18px;
    opacity: 0.5;
    margin-right: 5px;
}

.background {
    background-image: url(/img/games/network.png);
    background-size: cover;
    background-position: center top;
    z-index: -2;
    width: 100%;
    height: 100%;
    position: absolute;
    transition-duration: 0.5s;
    transition: opacity 0.5s ease-in-out;
}

.background-filter {
    z-index: -1;
    backdrop-filter: blur(8px) brightness(0.45);
    -webkit-backdrop-filter: blur(8px) brightness(0.45);
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    position: absolute;
    overflow: hidden;
}

.testing {
    z-index: -1;
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.flex-two-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.mright {
    margin-right: 10px;
}

.mleft {
    margin-left: 10px;
}

.searchbar {
    all: unset;
    font-size: 14px;
    background-color: #222;
    color: white;
    transition-duration: 0.3s;
    position: relative;
    width: 300px;
    right: 0px;
    border-radius: 15px;
    padding: 6px;
    padding-left: 15px;
    margin-right: 9px;
}

#level-container-container {
    margin: 10px;
}

.dropdown-arrow {
    height: 24px;
    opacity: 0.5;
    transition-duration: 0.5s;
}

.dropdown-arrow:hover {
    opacity: 1;
}

.social-media-logo, #sociallink-discord {
    height: 24px;
    opacity: 0.5;
    transition-duration: 0.3s;
    cursor: pointer;
}

.social-media-discord, #sociallink-discord {
    height: 24px;
    transition-duration: 0.3s;
    cursor: pointer;
}

#social-discord-username {
    color: white;
}

.social-media-logo:hover {
    opacity: 1;
}

#sociallink-discord:hover {
    opacity: 1;
}

.searchbar:focus {
    outline: none;
    box-shadow: 0 0 10px rgba(200, 200, 200, 0.2);
    position: relative;
    width: 325px;
    background-color: var(--nadeshiko-dark);
}

.player-card {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 25px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    width: min(60%, 800px);
}

.extended-card {
    background-color: rgba(0, 0, 0, 0.25);
    border-radius: 15px;
    padding: 10px;
    margin: 5px;
    margin-top: 15px;
    margin-bottom: 15px;
}
/* ... */

